# rotoslang

./: .gitignore  .project  .pydevproject  LICENSE  README.md  maya_env_documentation.md  rotoslang.code-workspace  workspace.code-workspace
USD_maya_scenes/: USD_maya_scene.ma  geometry.usd
lhrig/: .project  curveDeformerExample.mb
lhrig/SlideDeformerCPP/: .nfs00000000043d5e8a000001fb  .nfs0000000004400a6a00000125  .nfs0000000004400a6d00000126  .nfs0000000004400a6e0000012f  FinalTwoDeformers.ma  LHVectorDeformer.cpp  LHVectorDeformer.h  __init__.py~  pluginMain.cpp  vecDeformer.ma  vecDeformerBuilt.ma
lhrig/SlideDeformerCPP/FaceRig/: BrowsRenamed.ma  FaceAndBrow.ma  FinalTwoDeformers.ma  broken.ma  brow.sld  finalMouth.ma  lids.sld  lidsBuilt.ma  lips.sld  moutNewBUILT.ma  mouth.sld  oldMan.ma  oldManForTest.ma  oldMan_lips.ma  oldMan_lipsBuilt.ma  r_lids.sld
lhrig/SlideDeformerCPP/SLIDE/: LHSlideDeformer.cpp  LHSlideDeformerOLD.cpp  pluginMain.cpp
lhrig/blend/: BlendNode.cpp  BlendNode.h  Makefile
lhrig/plugins/LHBlendRemap/: LHBlendRemap.cpp  LHBlendRemap.h  pluginMain.cpp
lhrig/plugins/LHCurveDeformer/: .Makefile.swp  LHCurveDeformer.cpp  LHCurveDeformer.h  Makefile
lhrig/plugins/LHCurveRollDeformer/: LHCurveRollDeformer.h  LHCurveRollDeformerORIGINAL.cpp  Makefile
lhrig/plugins/LHLocator/: LHAimConstraint.cpp  LHAimConstraint.h  LHLocatorORIGINAL.cpp  LHLocatorOriginal.h
lhrig/plugins/LHNurbsBlendshape/: Makefile
lhrig/plugins/LHRollNode/: rnkCurveDeformer.cpp~  rnkCurveDeformer.h~  rnkRollNode.h
lhrig/plugins/LHSlideDeformer/: LHSlideDeformer.cpp  LHSlideDeformer.py  LHSlideDeformerOLD.cpp  Makefile  MoveTool.py  Test.py
lhrig/plugins/LHSymMeshCmd/: LHSymMeshCmd.cpp  Makefile
lhrig/plugins/LHVectorDeformer/: Makefile
lhrig/plugins/LHWeightDeformer/: LHWeightDeformer.cpp  LHWeightDeformerORIGINAL.cpp  Makefile  OLDWeightDeformer.cpp
lhrig/plugins/LHWeightEvent/: LHWeightEvent.cpp  Makefile  Makefile~
lhrig/plugins/SplatDeformer/: Makefile  splatDeformer.cpp
lhrig/utils/: LHCurveDeformerCmds.py  faceWeights.py  lhDeformerCmds.py  lhDeformerCmdsOLD.py  lhDeformerExport.py  misc.py  slideDeformerCmds.py  slideDeformerCmdsOLD.py  slideDeformerExport.py  slideGui.py  vectorDeformerCmds.py  vectorDeformerCmdsOLD.py  weights.py
lhrig/weights/: C_body_SKN.xml  L_holster00plane_SKN.xml  L_holster03plane_SKN.xml  L_holster04plane_SKN.xml  R_holster00plane_SKN.xml  R_holster01plane_SKN.xml  R_holster04plane_SKN.xml  body.xml  skinCluster1.xml  skinCluster2.xml
src/: settingsBACKUP.json
src/LH/cpp/plugins/mayaplugin/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeListsLinux.txt  CMakeListsMAC.txt  CMakeListsOSX.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LHDeformerNodes.sln  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  footprintNode.cpp  package.yaml
src/LH/cpp/plugins/mayaplugin/modules/: FindMaya.cmake  FindMayaBackup.cmake  FindOpenMP.cmake
src/LH/cpp/plugins/mayaplugin/src/: .gitignore  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LHBlendshapeSimple.cpp  LHBlendshapeSimple.h  LHCollisionDeformer.cpp  LHCollisionDeformer.h  LHCollisionDeformerMultiple.mb  LHCollisionLocator.cpp  LHCollisionLocator.h  LHComputeDeformer.cpp  LHComputeDeformer.h  LHCurveDeformer.cpp  LHCurveDeformer.h  LHCurveRollDeformer.cpp  LHCurveRollDeformer.h  LHCurveRollSimple.cpp  LHCurveRollSimple.h  LHCurveTransform.cpp  LHCurveTransform.h  LHCurveWeightNode.cpp  LHCurveWeightNode.h  LHCurveWeightNode_2.cpp  LHCurveWeightNode_2.h  LHCurveWeightUtils.cpp  LHCurveWeightUtils.h  LHDeformerNodes.vcxproj  LHDeformerNodes.vcxproj.filters  LHGeometryConstraint.cpp  LHGeometryConstraint.h  LHGetDeformPoints.cpp  LHGetDeformPoints.h  LHKDoubleArrayToKFloatArray.cpp  LHKDoubleArrayToKFloatArray.h  LHLocator.h  LHMatrixDeformer.cpp  LHMatrixDeformer.h  LHMultiCluster.cpp  LHMultiCluster.h  (+49 more)
src/LH/cpp/plugins/mayaplugin/src/Debug/: LHDeformerNodes.exp  LHDeformerNodes.lib  LHDeformerNodes.mll
src/LH/cpp/plugins/mayaplugin/src/LHDeformerNodes.dir/Debug/: LHDeformerNodes.mll.recipe
src/LH/cpp/plugins/mayaplugin/src/LHDeformerNodes.dir/Debug/LHDeformerNodes.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/LH/cpp/plugins/mayaplugin/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
src/LH/cpp/plugins/mayaplugin/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/LH/cpp/plugins/mayaplugin/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/LH/cpp/plugins/mayaplugin/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/LH/cpp/plugins/templateNodes/: CMakeLists.txt  package.yaml
src/LH/cpp/plugins/templateNodes/src/: locatorTemplate.cpp  locatorTemplate.h  pluginMain.cpp
src/ka_rigTools/: core.py.bak  ka_attr.py  ka_constraints.py  ka_controls.py  ka_deformers.py  ka_deformers.py.bak  ka_display.py.bak  ka_locator.py  ka_qtWidgets.py.bak  ka_reload.py.bak  ka_rigAerobics.py  ka_rigAerobics.py.bak  ka_scrubSlider.py.bak  ka_shapes.py  ka_skinCluster.py  ka_util.py  ka_util.py.bak  snippitDict.py
src/ka_rigTools/kMenu/: __init__.py
src/ka_rigTools/ka_advancedJoints/: __init__.py  __init__.py.bak  ka_advancedJoints_volumeRotator.py  ka_poseSpaceTools.py.bak
src/ka_rigTools/ka_attrTool/: attrCommands.py  attributeObj.py  ka_attrTool_UI.py.bak
src/ka_rigTools/ka_filterSelection/: __init__.py.bak  __init__.py~
src/ka_rigTools/ka_mayaCommandOverrides/: __init__.py  __init__.py.bak
src/ka_rigTools/ka_menu/: __init__.py.bak  __init__.py~  ka_menu_hyperConnector.py  ka_menu_hyperConnector_attributePopularity.py  ka_menu_hyperConnector_favoritesDictionary.py  ka_menu_hyperShade.py  (+2 more)
src/scenes/: bodyJnts.ma  gpuTest.ma  tireWithGroundPlaneNewTest.ma  workspace.mel
(+840 files in other folders)
